<resources>
    <string name="app_name">Great Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Calender">Calender</string>
    <string name="Customer">Customer</string>
    <string name="Setting">Setting</string>
    <string name="Sun">SUN</string>
    <string name="Mon">MON</string>
    <string name="Tue">TUE</string>
    <string name="Wed">WED</string>
    <string name="Thu">THU</string>
    <string name="Fri">FRI</string>
    <string name="Sat">SAT</string>
    <string name="Prev">PREV</string>
    <string name="Next">NEXT</string>
    <string name="Time">Time</string>
    <string name="StartTime">Start Time</string>
    <string name="SelectTime">Select Time</string>
    <string name="AppointmentTime">Appointment Time(Minutes)</string>
    <string name="Date">Date</string>
    <string name="Location">Location</string>
    <string name="Note">Note</string>
    <string name="AddSchedule">Add Schedule</string>
    <string name="AddCustomer">Add Customer</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="InputValidName">Please Input Valid Name</string>
    <string name="InputValidAddress">Please Input Valid Address</string>
    <string name="InputValidPhone">Please Input Valid Phone Number</string>
    <string name="InputValidEmail">Please Input Valid Email Address</string>
    <string name="SelectValidCustomer">Please Select Valid Customer</string>
    <string name="SelectValidTimeLast">Please Select Valid Appointment Time</string>
    <string name="SelectValidLocation">Please Select Valid Location</string>
    <string name="Minutes">Minutes</string>
    <string name="Delete">Delete</string>
    <string name="DoUWantDeleteSchedule">Do you want to delete schedule at:</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Account manager -->
    <string name="account_type">com.xingzhaohui.xingtest</string>
    <string name="deafulttoken">XingtestDefaultOAuthToken</string>
    <string name="intentaccounttypekey">XingTestAccountType</string>
    <string name="intentaccounttokenkey">XingTestTokenType</string>
    <string name="addnewaccountkey">IsAddingNewAccount</string>
</resources>
