<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xingzhaohui.xingtest.mainmodule.view.SchedulePage">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/previous_month"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textColor="@color/BlueViolet"
                android:background="@color/Transparent"
                android:text="@string/Prev"
                android:gravity="center"/>
            <TextView
                android:id="@+id/display_current_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_weight="3"/>
            <Button
                android:id="@+id/next_month"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:textColor="@color/Aquamarine"
                android:background="@color/Transparent"
                android:text="@string/Next"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/Goldenrod"
                android:text="@string/Mon"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/Silver"
                android:text="@string/Tue"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/MediumOrchid"
                android:text="@string/Wed"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Thursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/PowderBlue"
                android:text="@string/Thu"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/GreenYellow"
                android:text="@string/Fri"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/RosyBrown"
                android:text="@string/Sat"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/BurlyWood"
                android:text="@string/Sun"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7"/>
    </LinearLayout>

</FrameLayout>
