<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:clickable="true"
    tools:context="com.xingzhaohui.xingtest.mainmodule.view.AddSchedulePage">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="4dp" >

        <TextView
            android:id="@+id/DateLabel"
            android:background="@color/Lavender"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/CustomerLabel"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Customer" />

        <Spinner
            android:id="@+id/CustomerList"
            android:layout_margin="4dp"
            android:textSize="20sp"
            android:background="@color/Lavender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TimeLabel"
            android:layout_marginTop="10dp"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartTime" />

        <Button
            android:id="@+id/TimePickControl"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectTime" />

        <TextView
            android:id="@+id/TimeLastLabel"
            android:layout_marginTop="10dp"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppointmentTime" />

        <EditText
            android:id="@+id/TimeLastInput"
            android:background="@color/Lavender"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:hint="Input appointment time here"
            android:text=""
            android:maxLines="1" />

        <TextView
            android:id="@+id/LocationLabel"
            android:layout_marginTop="10dp"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location" />

        <EditText
            android:id="@+id/LocationInput"
            android:background="@color/Lavender"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input location here"
            android:text=""
            android:maxLines="1" />

        <TextView
            android:id="@+id/NoteLabel"
            android:layout_marginTop="10dp"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Note" />

        <EditText
            android:id="@+id/NoteInput"
            android:background="@color/Lavender"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add note here"
            android:text=""
            android:maxLines="2" />

        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"  >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">
                <Button
                    android:layout_gravity="left"
                    android:id="@+id/AddScheduleCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/Cancel" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/AddScheduleOK"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:text="@string/AddSchedule" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>
