<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/White"
    tools:context="com.xingzhaohui.xingtest.mainmodule.view.ReviewDaySchedulePage">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/closebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Close" />

            <Button
                android:id="@+id/deletebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delete" />

            <Button
                android:id="@+id/addbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AddSchedule" />
        </LinearLayout>

        <ListView
            android:id="@+id/schedulelist"
            android:divider="@color/DarkKhaki"
            android:drawSelectorOnTop="false"
            android:focusable="true"
            android:cacheColorHint="@color/BlueViolet"
            android:dividerHeight="2dp"
            android:choiceMode="singleChoice"
            android:listSelector="@color/CadetBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>
