<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/Thistle"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp" >

        <LinearLayout
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Lavender"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/namelabel"
                android:layout_width="@dimen/customer_listitem_label_width"
                android:layout_height="wrap_content"
                android:background="@color/DodgerBlue"
                android:textColor="@color/AntiqueWhite"
                android:textStyle="bold"
                android:text="@string/Name"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@color/NavajoWhite"
                android:textStyle="italic"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Lavender"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/addresslabel"
                android:layout_width="@dimen/customer_listitem_label_width"
                android:layout_height="wrap_content"
                android:background="@color/DodgerBlue"
                android:textColor="@color/AntiqueWhite"
                android:textStyle="bold"
                android:text="@string/Address"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/Lavender"
                android:textStyle="italic"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Lavender"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/phonelabel"
                android:layout_width="@dimen/customer_listitem_label_width"
                android:layout_height="wrap_content"
                android:background="@color/DodgerBlue"
                android:textColor="@color/AntiqueWhite"
                android:textStyle="bold"
                android:text="@string/Phone"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@color/Bisque"
                android:textStyle="italic"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Lavender"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/emaillabel"
                android:layout_width="@dimen/customer_listitem_label_width"
                android:layout_height="wrap_content"
                android:background="@color/DodgerBlue"
                android:textColor="@color/AntiqueWhite"
                android:textStyle="bold"
                android:text="@string/Email"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@color/PeachPuff"
                android:textStyle="italic"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
